added files and updated

--- a/students/nikkivanartsdalen/secondary.html
+++ b/students/nikkivanartsdalen/secondary.html
@@ -8,8 +8,10 @@
 
 <body>
 
-    <h1>The body is what the browser sees.</h1>
-    <p>Several ways to format text.</p>
+    <h1>This is Acadia.</h1>
+    <img src="Acadia.png">
+    <p>Are you ready to get a dog of your own yet?</p>
+    <h3><a href="index.html">Yes!</a></h2>
 </body>
 
 </html>
