--- a/students/nikkivanartsdalen/secondary.html
+++ b/students/nikkivanartsdalen/secondary.html
@@ -9,9 +9,9 @@
 <body>
 
     <h1>This is Acadia.</h1>
-    <img src="Acadia.png">
-    <p>Are you ready to get a dog of your own yet?</p>
-    <h3><a href="index.html">Yes!</a></h2>
+    <img src="Acadia.png" alt="Acadia, a super cute dog">
+    <p>So, are you ready to get a dog of your own yet?</p>
+    <h3><a href="index.html" alt="Home Page">Yes!</a></h2>
 </body>
 
 </html>
