final commit for week 1

--- a/students/nikkivanartsdalen/secondary.html
+++ b/students/nikkivanartsdalen/secondary.html
@@ -11,7 +11,7 @@
     <h1>This is Acadia.</h1>
     <img src="Acadia.png" alt="Acadia, a super cute dog">
     <p>So, are you ready to get a dog of your own yet?</p>
-    <h3><a href="index.html" alt="Home Page">Yes!</a></h2>
+    <h3><a href="index.html" title="Home Page">Yes!</a></h3>
 </body>
 
 </html>
