initial CSS commit

--- a/students/nikkivanartsdalen/secondary.html
+++ b/students/nikkivanartsdalen/secondary.html
@@ -1,15 +1,14 @@
 <!doctype html>
 <html>
-
 <head>
     <meta charset="UTF-8">
     <title>The Cutest Dog Ever</title>
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
-
     <h1>This is Acadia.</h1>
-    <img src="Acadia.png" alt="Acadia, a super cute dog">
+    <img src="images/Acadia.png" alt="Acadia, a super cute dog">
     <p>So, are you ready to get a dog of your own yet?</p>
     <h3><a href="index.html" title="Home Page">Yes!</a></h3>
 </body>
