--- a/students/nikkivanartsdalen/index.html
+++ b/students/nikkivanartsdalen/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html>
-
 <head>
     <meta charset="UTF-8">
     <title>All About Dogs</title>
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
-
-    <h1>Dogs are better than cats.</h1>
+    <header>
+            <h1>Dogs are better than cats.</h1>
+    </header>
     <p>Some may argue that cats are better than dogs, but they're wrong.</p>
     <h2>Here are a few reasons why:</h2>
     <ol>
@@ -20,7 +21,6 @@
     <p>Can't wait any longer?</p>
     <h3><a href="http://www.seattlehumane.org/" title="Seattle Humane Society" target="_blank">Adopt your next best friend here.</a></h3> <!-- Come up with a more enticing thing to say -->
     <p>Or <a href="secondary.html">click here</a> to see the cutest dog ever.</p>
-
 </body>
 
 </html>
