header image fix

--- a/students/nikkivanartsdalen/secondary.html
+++ b/students/nikkivanartsdalen/secondary.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-    <h1>This is Acadia.</h1>
+    <header>
+        <h1>This is Acadia.</h1></header>
     <img src="images/Acadia.png" alt="Acadia, a super cute dog">
     <p>So, are you ready to get a dog of your own yet?</p>
     <h3><a href="index.html" title="Home Page">Yes!</a></h3>
