comp initial commit
homework week 3

--- a/students/nikkivanartsdalen/index.html
+++ b/students/nikkivanartsdalen/index.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>All About Dogs</title>
+    <!-- <link href="css/reset.css" rel="stylesheet"> -->
     <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
     <header>
-            <h1>Dogs are better than cats.</h1>
+        <nav>
+            <ul>
+                <li><a href="http://www.seattlehumane.org/" title="Seattle Humane Society" target="_blank">Adopt</a></li>
+                <li><a href="secondary.html">Learn more!</a></li>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </nav>
+    <h1>Dogs are better than cats.</h1>
     </header>
     <p>Some may argue that cats are better than dogs, but they're wrong.</p>
     <h2>Here are a few reasons why:</h2>
