--- a/students/nikkivanartsdalen/secondary.html
+++ b/students/nikkivanartsdalen/secondary.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>The Cutest Dog Ever</title>
+    <!-- <link href="css/styles.css" ref="stylesheet"> -->
     <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <h1>This is Acadia.</h1></header>
+        <nav>
+            <ul>
+                <li><a href="http://www.seattlehumane.org/" title="Seattle Humane Society" target="_blank">Adopt</a></li>
+                <li><a href="secondary.html">Learn more!</a></li>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </nav>
+        <h1>This is Acadia.</h1>
+    </header>
     <img src="images/Acadia.png" alt="Acadia, a super cute dog">
     <p>So, are you ready to get a dog of your own yet?</p>
     <h3><a href="index.html" title="Home Page">Yes!</a></h3>
